--- a/dino.html
+++ b/dino.html
@@ -6,6 +6,7 @@
         <title>Dino Game</title>
     </head>
     <body>
+        <canvas width="800" height="450" id="myCanvas"></canvas>
         <script src="dinoGame.js"></script>
     </body>
 </html>
